--- a/style.css
+++ b/style.css
@@ -116,20 +116,20 @@ nav a {
   position: absolute;
   top: 110px;
   width: 100%;
-  height: 70vh;
+  height: 80vh;
   display: none;
   flex-direction: column;
   align-items: end;
   justify-content: center;
   z-index: 99;
-  background: #10253e;
+  background: #101624;
   transform: translateX(100%);
   transition: transform 0.3s ease-out;
 }
 
 .menu-overlay a {
   font-size: 25px;
-  padding: 10px 10px;
+  padding: 10px;
   margin-bottom: 20px;
 }
 
@@ -322,6 +322,10 @@ a:hover {
 #home img,
 #projects_menu {
   margin: 20px;
+}
+
+#hero h1 {
+  margin: 0;
 }
 
 #intro h1,
