--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ section {
 #move-up {
   display: none;
   position: fixed;
-  top: 80vh;
+  top: 75vh;
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -137,7 +137,7 @@ nav a {
   position: absolute;
   top: 110px;
   width: 100%;
-  height: 80vh;
+  height: 77vh;
   display: none;
   flex-direction: column;
   align-items: end;
@@ -304,6 +304,17 @@ nav a {
   margin: auto;
 }
 
+#correspondence {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+form {
+  width: 50%;
+}
+
 #contact div {
   padding: 20px;
 }
@@ -373,8 +384,6 @@ header, #home, .skillset, #projects_menu, #contact {
   justify-content: center;
 }
 
-
-
-input {
-  height: 20px;
+input, textarea {
+  width: 100%;
 }
