10. 'footer' section fixed. submit button reworked.

--- a/style.css
+++ b/style.css
@@ -306,11 +306,21 @@ form {
   width: 50%;
 }
 
+#submit-button {
+  margin: 10px 0;
+  font-size:medium;
+  width: 75px;
+  height: 40px;
+  border-radius: 10%;
+  border: solid 2px white;
+}
+
 #contact div {
   padding: 20px;
 }
 
 #about {
+  padding: 10px 0;
   background: #10253e;
   justify-content: space-around;
 }
@@ -325,10 +335,10 @@ i {
   font-size: 50px;
 }
 
-a {
+a, #submit-button {
   color: white;
   text-decoration: none;
-  background-image: linear-gradient(#4D7EA8, #152547);
+  background: linear-gradient(#4D7EA8, #152547);
   background-repeat: no-repeat;
   background-size: 0 100%;
   background-position-x: right;
@@ -342,7 +352,7 @@ a:hover {
   background-position-x: left;
 }
 
-header #move-up {
+header #move-up, #submit-button {
   box-shadow: 0 3px 7px -3px #101624;
 }
 
