11. 'hero' section height adjusted for Safari devices.

--- a/style.css
+++ b/style.css
@@ -156,6 +156,9 @@ nav a {
 }
 
 @media screen and (max-width: 750px) {
+  #hero {
+    height: 1400px;
+  }
   header nav {
     display: none;
   }
