--- a/style.css
+++ b/style.css
@@ -155,10 +155,14 @@ nav a {
   margin-bottom: 20px;
 }
 
+#hero-container {
+padding-top: 50px;
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
 @media screen and (max-width: 750px) {
-  #hero {
-    height: 1400px;
-  }
   header nav {
     display: none;
   }
@@ -209,31 +213,11 @@ nav a {
 }
 
 .intro-text {
-  animation: slide-left 0.5s ease-in-out;
-}
-
-
-@keyframes slide-left {
-  0% {
-    transform: translateX(-100%);
-  }
-
-  100% {
-    transform: translateX(0);
-  }
+  padding: 25px;
 }
 
 #avatar_img {
-  /* PULSING EFFECT ON IMAGE */
-  border-radius: 50%;
-  background-color: #101624;
-  animation: pulse 1500ms infinite;
-}
-
-#avatar_img:hover {
-  /* PULSING EFFECT DISSAPEARENCE WHILE HOVERING */
-  background-color: transparent;
-  animation: none;
+  object-fit: contain;
 }
 
 /* PULSING EFFECT KEYFRAMES */
@@ -355,7 +339,7 @@ a:hover {
   background-position-x: left;
 }
 
-header #move-up, #submit-button {
+header, .menu-overlay, #move-up, #submit-button {
   box-shadow: 0 3px 7px -3px #101624;
 }
 
