--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ html {
 }
 
 body {
+  overflow-y: auto;
   height: 100%;
   background-color: #10253e;
   /* TEXT APPERARANCE AND SIZE */
@@ -10,6 +11,10 @@ body {
   font-size: 20px;
   color: white;
   margin: 0;
+}
+
+body::-webkit-scrollbar {
+  display: none; /* Hide the scroll bar */
 }
 
 /* SECTION ANIMATION */
